# mathematics_for_industry_arcelor

./: README.md  pyproject.toml
mathematics_for_industry_arcelor/: Information Scrapyard challenge.xlsx  advanced_model.ipynb  advanced_model_2_sides.ipynb
