[tool.poetry]
name = "mathematics-for-industry-arcelor"
version = "0.1.0"
description = ""
authors = ["RobinTourlamain <robin.tourlamain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gurobipy = "^11.0.3"
jupyter = "^1.1.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
